--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.5.1",
     "cookies-next": "^4.0.0",
     "dayjs": "^1.11.10",
+    "moment": "^2.29.4",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18"
